--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,1 +1,13 @@
-<p>table works!</p>
+<section class="container">
+    <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Number of Books</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+</section>
