add icons center buttons

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -4,7 +4,7 @@
           <tr>
             <th>Title</th>
             <th>Author</th>
-            <th>Number of Books</th>
+            <th># Pages</th>
           </tr>
         </thead>
         <tbody>
