--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-table></app-table>
+<main>
+  <app-table></app-table>
+  <section class="d-flex justify-content-center">
+    <button class="btn"><i class="bi bi-plus-square-fill"></i> Add</button>
+    <button class="btn"><i class="bi bi-trash"></i>Clear</button>
+  </section>
+</main>
