add bs styles to searchbar remove bs icons

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,13 +1,19 @@
+<form action="" class="d-flex justify-content-center m-3 input-group">
+  <input type="search" class="p-2" name="search-bar" id="" placeholder="Search Books">
+  <button type="button" class="btn btn-dark">
+    <i class="fas fa-search"></i>
+  </button>
+</form>
 <section class="container">
-    <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th># Pages</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Author</th> 
+        <th># Pages</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
 </section>
