--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <main>
   <app-table></app-table>
   <section class="d-flex justify-content-center">
-    <button class="btn"><i class="bi bi-plus-square-fill"></i> Add</button>
+    <button class="btn btn-dark "><i class="fa fa-plus-circle"></i>
+      Add
+    </button>
   </section>
 </main>
