header and a toolbal in root component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <main>
+  <header class="navbar navbar-light bg-dark">
+    <h1 class="navbar-brand title"><i class="fas fa-book m-1"></i>OP | My Library</h1> 
+  </header>
   <app-table></app-table>
   <section class="d-flex justify-content-center">
     <button class="btn btn-dark "><i class="fa fa-plus-circle"></i>
