text in app component add button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <app-table></app-table>
   <section class="d-flex justify-content-center">
     <button class="btn btn-dark "><i class="fa fa-plus-circle"></i>
-      Add
+      Add Book
     </button>
   </section>
 </main>
