bootstrap styles to modal content form

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -23,4 +23,11 @@
       </tr>
     </tbody>
   </table>
+
+</section>
+<section class="d-flex justify-content-center">
+  <button class="btn btn-dark ">
+    <i class="fas fa-book-open"></i>
+    Add Book
+  </button>
 </section>
