--- a/src/app/book-form/book-form.component.html
+++ b/src/app/book-form/book-form.component.html
@@ -1,15 +1,22 @@
-<form action="">
-    <div class="form-group">
+<h1 class="d-flex justify-content-center p-3">Add A Book</h1>
+<form class="d-flex flex-column pt-2 m-2" action="">
+    <div class="form-group m-3">
         <label for="title">Title</label>
         <input type="text" class="form-control" id="title" name="title" required>
     </div>
-    <div class="form-group">
+    <div class="form-group m-3">
         <label for="author">Author</label>
         <input type="text" class="form-control" id="author" name="author" required>
     </div>
-    <div class="form-group">
+    <div class="form-group m-3">
         <label for="numBooks">Number of Books</label>
         <input type="number" class="form-control" id="pages" name="numBooks" required>
     </div>
-    <button type="submit" class="btn">Add Book</button>
+    <section class=" d-flex  justify-content-center">
+
+        <button class="btn btn-dark m-3 w-100">
+            <i class="fas fa-pen-alt"></i>
+            Submit
+        </button>
+    </section>
 </form>
