add user input for book details and bootstrap card to details page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <header class="navbar navbar-light bg-dark">
     <h1 class="navbar-brand title"><i class="fas fa-book m-1"></i>OP | My Library</h1>
   </header>
-  <app-table></app-table>
+  <app-detail-card></app-detail-card>
 </main>
