--- a/src/app/book-form/book-form.component.html
+++ b/src/app/book-form/book-form.component.html
@@ -12,6 +12,10 @@
         <label for="numBooks">Number of Books</label>
         <input type="number" class="form-control" id="pages" name="numBooks" required>
     </div>
+    <div>
+        <textarea class="w-100">
+        </textarea>
+    </div>
     <section class=" d-flex  justify-content-center">
 
         <button class="btn btn-dark m-3 w-100">
