--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -18,7 +18,8 @@
         <td>{{ books.id }}. {{ books.title }}</td>
         <td>{{ books.author }}</td>
         <td>{{ books.pages }}</td>
-        <td><i class="fas fa-minus-circle"></i></td>
+        <td><i class='fas fa-trash-alt'></i>
+        </td>
 
       </tr>
     </tbody>
