add modal to form component

--- a/src/app/book-form/book-form.component.html
+++ b/src/app/book-form/book-form.component.html
@@ -23,4 +23,7 @@
             Submit
         </button>
     </section>
+    <button class="btn" (click)="activeModal.close()">
+        Cancel
+    </button>
 </form>
