form logic in form component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
-  <header class="navbar navbar-light bg-dark">
+  <header class="navbar navbar-light">
     <h1 class="navbar-brand title"><i class="fas fa-book m-1"></i>OP | My Library</h1>
   </header>
   <app-table></app-table>
