--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,11 @@ main {
     flex-direction: column;
 }
 
+header {
+    background: linear-gradient(to bottom, #000000, #434343);
+
+}
+
 .title {
-    color:white
+    color: white
 }
