--- a/src/app/book-form/book-form.component.html
+++ b/src/app/book-form/book-form.component.html
@@ -1,19 +1,20 @@
 <h1 class="d-flex justify-content-center p-3">Add A Book</h1>
-<form class="d-flex flex-column pt-2 m-2" action="">
+<form [formGroup]="bookForm" class="d-flex flex-column pt-2 m-2" action="" >
     <div class="form-group m-3">
         <label for="title">Title</label>
-        <input type="text" class="form-control" id="title" name="title" required>
+        <input type="text" class="form-control" id="title" name="title" formControlName="title" required>
     </div>
     <div class="form-group m-3">
         <label for="author">Author</label>
-        <input type="text" class="form-control" id="author" name="author" required>
+        <input type="text" class="form-control" id="author" name="author" formControlName="author" required>
     </div>
     <div class="form-group m-3">
-        <label for="numBooks">Number of Books</label>
-        <input type="number" class="form-control" id="pages" name="numBooks" required>
+        <label for="pages">Number of Pages</label>
+        <input type="number" class="form-control" id="pages" name="pages" formControlName="pages" required>
     </div>
     <div>
-        <textarea class="w-100">
+        <label for="details">Summary:</label>
+        <textarea class="w-100" name="details" formControlName="details">
         </textarea>
     </div>
     <section class=" d-flex  justify-content-center">
