--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,8 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,400i,700");
 
+* {
+    font-family: 'Raleway';
+}
