--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <header class="navbar navbar-light">
     <h1 class="navbar-brand title"><i class="fas fa-book m-1"></i>OP | My Library</h1>
   </header>
-  <app-table></app-table>
+  <router-outlet></router-outlet>
 </main>
